3.4/src/app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  #type: NodePort
  selector:
    app: app-deployment
  ports:
    - name: http
      port: 80
      #nodePort: 30080 
      targetPort: 80
