3.4/src/canary-app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: canary-app
spec:
  #type: NodePort
  selector:
    app: app-deployment
  ports:
    - name: http
      port: 80
      #nodePort: 30080 
      targetPort: 80
