3.4/src/ingress_app1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: homework.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port: 
              number: 80
  # tls:
  #   - hosts:
  #     - homework.ru
  #     secretName: nginx-secret
  ingressClassName: nginx
